# python_template

./: .gitignore  .pre-commit-config.yaml  .ralph_session_history  1pyproject.toml  3pyproject.toml  @AGENT.md  @fix_plan.md  AGENTS.md  PROMPT.md  README.md  agents.md  buildozer.spec  pyproject.toml  python_template.deps.yaml  run_echo_chamber.py  status.json
.claude/: README.md  activate.sh  setup-common.sh
.claude/commands/: fix-issue.md
.claude/hooks/: SessionStart
.devcontainer/: Dockerfile  devcontainer.json  pixi-global-devpod.toml
.devcontainer/ci/: devcontainer.json
.devcontainer/claude-code/: README.md  TROUBLESHOOTING.md  devcontainer-feature.json  init-host.sh  install-ralph.sh  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  devcontainer.yml  pre-commit.yaml  prek.yaml  template-sync.yml
docs/: intro.rst
echo_chamber/: README.md  __init__.py  main.py  storage.py
python_template/: basic_class.py
scripts/: devcontainer_use_local.sh  devcontainer_use_prebuilt.sh  launch_vscode.sh  rename_project.sh  setup_host.sh  update_from_template.sh
test/: test_echo_chamber.py
