[project]
name = "python_template"
version = "1.0.0"
description = "A python package template"
authors = [{name = "Austin Gregg-Smith", email = "blooop@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
python_template = { path = ".", editable = true }

[tool.pixi.tasks]


[tool.setuptools.packages.find]
include= ["python_template"]
