[project]
name = "python_template"
version = "1.0.0"
description = "A python package template"
authors = [{name = "Austin Gregg-Smith", email = "blooop@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
python_template = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.test.tasks]
fmt = "black ."
lint = "ruff check . --fix ; pylint $(git ls-files '*.py')"
test = "pytest"
coverage = "run -m pytest"

[tool.setuptools.packages.find]
include= ["python_template"]

# Environments
[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }